use axios to get posts data

--- a/test-react/src/css/main.css
+++ b/test-react/src/css/main.css
@@ -1,5 +1,9 @@
+#root{
+    padding-bottom: calc(1em + 20px);
+}
+
 .footer{
-    position: absolute;
+    position: fixed;
     /* height: 30px; */
     bottom: 0px;
     background: rgb(0, 0, 0);
@@ -7,4 +11,11 @@
     color: rgb(229, 238, 209);
     text-align: center;
     padding: 10px;
+}
+
+article{
+    padding: 10px;
+    margin: 15px;
+    border : 1px solid rgb(200, 200, 200);
+    border-radius: 5px;
 }
